feat(devops): add basic monitoring dashboard in Grafana (#120)